--- a/CartKaro/Views/ContactsPage.xaml
+++ b/CartKaro/Views/ContactsPage.xaml
@@ -3,20 +3,30 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="CartKaro.Views.ContactsPage"
              Title="Contacts">
-    <ListView x:Name="listContacts"
-              Background="Transparent"
-              ItemsSource="{Binding ContactDetails}"
-              SeparatorColor="Aqua"
-              RowHeight="60"
-              SelectedItem="{Binding SelectedContact}"
-              ItemTapped="listContacts_ItemTapped">
-        <ListView.ItemTemplate>
-            <DataTemplate>
-                <TextCell Text="{Binding Name}"
+    <Grid RowDefinitions="*, 50"
+          ColumnDefinitions="*">
+        <ListView Grid.Row="0"
+                  Grid.Column="0"
+                  x:Name="listContacts"
+                  Background="Transparent"
+                  ItemsSource="{Binding ContactDetails}"
+                  SeparatorColor="Aqua"
+                  RowHeight="60"
+                  SelectedItem="{Binding SelectedContact}"
+                  ItemTapped="listContacts_ItemTapped">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextCell Text="{Binding Name}"
                           Detail="{Binding Email}">
                           
-                </TextCell>
-            </DataTemplate>
-        </ListView.ItemTemplate>
-    </ListView>
+                    </TextCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+        <Button Grid.Row="1"
+                Grid.Column="0"
+                Text="Add Contact"
+                Command="{Binding AddContactCommand}"/>
+    </Grid>
 </ContentPage>
