--- a/CartKaro/Views/Controls/ContactControlPage.xaml
+++ b/CartKaro/Views/Controls/ContactControlPage.xaml
@@ -1,10 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-             xmlns:controls="clr-namespace:CartKaro.Views.Controls"
-             x:Class="CartKaro.Views.EditContactPage"
-             Title="Edit Contact">
+             x:Class="CartKaro.Views.Controls.ContactControlPage">
     <VerticalStackLayout Spacing="10" Margin="20, 20, 20, 0">
         <Frame Padding="10,2,10,2">
             <HorizontalStackLayout>
@@ -53,7 +51,8 @@
                 <Entry x:Name="entryAddress" VerticalOptions="Center" Text="{Binding EntryAddress}"/>
             </HorizontalStackLayout>
         </Frame>
-        <Button Text="Update" Command="{Binding UpdateContactCommand}"/>
+        <Button Text="Save" Command="{Binding SaveContactCommand}"/>
         <Button Text="Cancel" Command="{Binding CancelContactCommand}"/>
     </VerticalStackLayout>
-</ContentPage>
+</ContentView>
+
