--- a/CartKaro/Views/ContactsPage.xaml
+++ b/CartKaro/Views/ContactsPage.xaml
@@ -3,9 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="CartKaro.Views.ContactsPage"
              Title="Contacts">
-    <Grid RowDefinitions="*, 50"
-          ColumnDefinitions="*">
-        <ListView Grid.Row="0"
+    <Grid RowDefinitions="50, *, 50"
+          ColumnDefinitions="*"
+          Padding="5">
+        <SearchBar Grid.Row="0"
+                      Grid.Column="0"
+                      Placeholder="Search Contact"
+                      Text="{Binding SearchContactText}"></SearchBar>
+        <ListView Grid.Row="1"
                   Grid.Column="0"
                   x:Name="listContacts"
                   Background="Transparent"
@@ -16,15 +21,21 @@
                   ItemTapped="listContacts_ItemTapped">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <TextCell Text="{Binding Name}"
-                          Detail="{Binding Email}">
-                          
+                    <TextCell Text="{Binding Name, Mode=TwoWay}"
+                                Detail="{Binding Email, Mode=TwoWay}">
+                          <TextCell.ContextActions>
+                            <MenuItem Text="Delete"
+                                          IsDestructive="True"
+                                          Command="{Binding DeleteContactCommand}" 
+                                          CommandParameter="{Binding .}">
+                            </MenuItem>
+                        </TextCell.ContextActions>
                     </TextCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
 
-        <Button Grid.Row="1"
+        <Button Grid.Row="2"
                 Grid.Column="0"
                 Text="Add Contact"
                 Command="{Binding AddContactCommand}"/>
