--- a/CartKaro/Views/ContactsPage.xaml
+++ b/CartKaro/Views/ContactsPage.xaml
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
                  xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                 xmlns:local="clr-namespace:CartKaro"
                  x:Class="CartKaro.Views.ContactsPage"
                  Title="Contacts">
-    <Grid RowDefinitions="50, *, 50"
+    <Grid RowDefinitions="50, *, 50, 50"                        
            ColumnDefinitions="*"
-           Padding="5">
+           Padding="5"
+           RowSpacing="5">
         <SearchBar Grid.Row="0"
                       Grid.Column="0"
                       Placeholder="Search Contact"
@@ -40,5 +42,19 @@
                   Grid.Column="0"
                   Text="Add Contact"
                   Command="{Binding AddContactCommand}"/>
+        <Grid Grid.Row="3"
+               Grid.Column="0"
+               ColumnDefinitions="*,  Auto">
+            <Label Grid.Column="0"
+                     Text="{Binding ThemeLabelText, StringFormat='Selected Theme: {0}'}"
+                     VerticalOptions="Center"
+                     HorizontalOptions="Start"/>
+            <Button VerticalOptions="Center"
+                      HorizontalOptions="End"
+                      Grid.Column="1"   
+                      Text="Change Theme"
+                      Command="{Binding ThemeChangeCommand}"/>
+        </Grid>
+        
     </Grid>
 </ContentPage>
