--- a/CartKaro/Views/EditContactPage.xaml
+++ b/CartKaro/Views/EditContactPage.xaml
@@ -4,56 +4,50 @@
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:controls="clr-namespace:CartKaro.Views.Controls"
              x:Class="CartKaro.Views.EditContactPage"
+             xmlns:viewModel="clr-namespace:CartKaro.ViewModels"
+             x:DataType="viewModel:EditContactPageViewModel"
              Title="Edit Contact">
-    <VerticalStackLayout Spacing="10" Margin="20, 20, 20, 0">
-        <Frame Padding="10,2,10,2">
-            <HorizontalStackLayout>
-                <Label Text="Name" VerticalOptions="Center" WidthRequest="60"/>
-                <Entry x:Name="entryName" VerticalOptions="Center" Text="{Binding EntryName}">
-                    <Entry.Behaviors>
-                        <toolkit:TextValidationBehavior
-                            MinimumLength="1"
-                            IsNotValid="{Binding TextValidator}"
-                            Flags="ValidateOnAttaching, ValidateOnValueChanged" 
-                            />
-                    </Entry.Behaviors>
-                </Entry>
-            </HorizontalStackLayout>
-        </Frame>
-        
-        <Frame Padding="10,2,10,2">
-            <HorizontalStackLayout>
-                <Label Text="Email" VerticalOptions="Center" WidthRequest="60"/>
-                <Entry x:Name="entryEmail" VerticalOptions="Center" Text="{Binding EntryEmail}">
-                    <Entry.Behaviors>
-                        <toolkit:MultiValidationBehavior Flags="ValidateOnAttaching, ValidateOnValueChanged"
-                                                         IsNotValid="{Binding EmailValidator}">
-                            <toolkit:TextValidationBehavior Flags="ValidateOnAttaching, ValidateOnValueChanged"
-                                                            MinimumLength="1"
-                                                            IsNotValid="{Binding EmailTextValidator}"/>
-                            <toolkit:EmailValidationBehavior Flags="ValidateOnAttaching, ValidateOnValueChanged"
-                                                             IsNotValid="{Binding EmailValidator}"/>
-
-                        </toolkit:MultiValidationBehavior>
-                    </Entry.Behaviors>
-                </Entry>
-            </HorizontalStackLayout>
-        </Frame>
-        
-        <Frame Padding="10,2,10,2">
-            <HorizontalStackLayout>
-                <Label Text="Phone" VerticalOptions="Center" WidthRequest="60"/>
-                <Entry x:Name="entryPhone" VerticalOptions="Center" Text="{Binding EntryPhone}"/>
-            </HorizontalStackLayout>
-        </Frame>
-        
-        <Frame Padding="10,2,10,2">
-            <HorizontalStackLayout>
-                <Label Text="Address" VerticalOptions="Center" WidthRequest="60"/>
-                <Entry x:Name="entryAddress" VerticalOptions="Center" Text="{Binding EntryAddress}"/>
-            </HorizontalStackLayout>
-        </Frame>
-        <Button Text="Update" Command="{Binding UpdateContactCommand}"/>
-        <Button Text="Cancel" Command="{Binding CancelContactCommand}"/>
-    </VerticalStackLayout>
+    <ContentPage.Content>
+        <ScrollView>
+            <StackLayout Spacing="10" Margin="20">
+                <Frame Padding="10" CornerRadius="5" HasShadow="True">
+                    <Entry x:Name="entryName" VerticalOptions="Center" Text="{Binding EntryName}" Grid.Column="1" Placeholder="Name">
+                        <Entry.Behaviors>
+                            <toolkit:TextValidationBehavior
+                                MinimumLength="1"
+                                IsNotValid="{Binding TextValidator}"
+                                Flags="ValidateOnAttaching, ValidateOnValueChanged" 
+                                />
+                        </Entry.Behaviors>
+                    </Entry>
+                </Frame>
+                
+                <Frame Padding="10" CornerRadius="5" HasShadow="True">
+                    <Entry x:Name="entryEmail" VerticalOptions="Center" Text="{Binding EntryEmail}" Grid.Column="1" Placeholder="Email">
+                        <Entry.Behaviors>
+                            <toolkit:MultiValidationBehavior Flags="ValidateOnAttaching, ValidateOnValueChanged"
+                                                             IsNotValid="{Binding EmailValidator}">
+                                <toolkit:TextValidationBehavior Flags="ValidateOnAttaching, ValidateOnValueChanged"
+                                                                MinimumLength="1"
+                                                                IsNotValid="{Binding EmailTextValidator}"/>
+                                <toolkit:EmailValidationBehavior Flags="ValidateOnAttaching, ValidateOnValueChanged"
+                                                                 IsNotValid="{Binding EmailValidator}"/>
+                            </toolkit:MultiValidationBehavior>
+                        </Entry.Behaviors>
+                    </Entry>
+                </Frame>
+                
+                <Frame Padding="10" CornerRadius="5" HasShadow="True">
+                    <Entry x:Name="entryPhone" VerticalOptions="Center" Text="{Binding EntryPhone}" Grid.Column="1" Placeholder="Phone"/>
+                </Frame>
+                
+                <Frame Padding="10" CornerRadius="5" HasShadow="True">
+                    <Entry x:Name="entryAddress" VerticalOptions="Center" Text="{Binding EntryAddress}" Grid.Column="1" Placeholder="Address"/>
+                </Frame>
+                
+                <Button Text="Update" Command="{Binding UpdateContactCommand}" HorizontalOptions="FillAndExpand" />
+                <Button Text="Cancel" Command="{Binding CancelContactCommand}" HorizontalOptions="FillAndExpand" />
+            </StackLayout>
+        </ScrollView>
+    </ContentPage.Content>
 </ContentPage>
