--- a/CartKaro/Resources/Themes/Styles.xaml
+++ b/CartKaro/Resources/Themes/Styles.xaml
@@ -1,8 +1,7 @@
-﻿<?xml version="1.0" encoding="UTF-8" ?>
-<?xaml-comp compile="true" ?>
-<ResourceDictionary 
-    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="CartKaro.Resources.Themes.Styles">
 
     <Style TargetType="ActivityIndicator">
         <Setter Property="Color" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource White}}" />
@@ -25,7 +24,7 @@
 
     <Style TargetType="Button">
         <Setter Property="TextColor" Value="Black" />
-        <Setter Property="BackgroundColor" Value="CornflowerBlue" />
+        <Setter Property="BackgroundColor" Value="Transparent" />
         <Setter Property="FontFamily" Value="OpenSansRegular"/>
         <Setter Property="FontSize" Value="14"/>
         <Setter Property="CornerRadius" Value="8"/>
@@ -402,4 +401,3 @@
     </Style>
 
 </ResourceDictionary>
-
