--- a/CartKaro/Resources/Themes/Default.xaml
+++ b/CartKaro/Resources/Themes/Default.xaml
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="CartKaro.Resources.Themes.Light">
+             x:Class="CartKaro.Resources.Themes.Default">
 
-    <Color x:Key="Primary">White</Color>
+    <Color x:Key="Primary">#512BD4</Color>
     <Color x:Key="Secondary">#DFD8F7</Color>
-    <Color x:Key="Tertiary">White</Color>
+    <Color x:Key="Tertiary">#2B0B98</Color>
 
     <Color x:Key="PageBg">White</Color>
     <Color x:Key="LabelTextColor">Black</Color>
@@ -26,4 +26,5 @@
     <SolidColorBrush x:Key="PrimaryBrush" Color="{StaticResource Primary}"/>
     <SolidColorBrush x:Key="SecondaryBrush" Color="{StaticResource Secondary}"/>
     <SolidColorBrush x:Key="TertiaryBrush" Color="{StaticResource Tertiary}"/>
+
 </ResourceDictionary>
