--- a/CartKaro/Views/AddContactPage.xaml
+++ b/CartKaro/Views/AddContactPage.xaml
@@ -5,7 +5,8 @@
              xmlns:vm="clr-namespace:CartKaro.ViewModels"
              x:DataType="vm:AddContactPageViewModel"
              x:Class="CartKaro.Views.AddContactPage"
-             Title="Add Contact">
+             Title="Add Contact"
+             BackgroundColor="{DynamicResource ContentPageBgColor}">
     <ContentPage.Content>
         <ScrollView>
             <StackLayout Spacing="10" Margin="20">
