--- a/CartKaro/Views/ContactsPage.xaml
+++ b/CartKaro/Views/ContactsPage.xaml
@@ -1,8 +1,7 @@
 ﻿<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:CartKaro"
-             xmlns:vm="clr-namespace:CartKaro.ViewModels"
              x:Class="CartKaro.Views.ContactsPage"
+             BackgroundColor="{DynamicResource ContentPageBgColor}"
              Title="Contacts">
 
     <ContentPage.ToolbarItems>
@@ -10,36 +9,38 @@
                      FlexLayout.AlignSelf="Start"
                      IconImageSource="adduser.png"
                      Command="{Binding AddContactCommand}" />
-        <ToolbarItem Text="{OnPlatform Default='Theme', iOS='Theme'}"
-                     IconImageSource="theme.png"
-                     Command="{Binding ThemeChangeCommand}" />
+        <ToolbarItem Text="Settings"
+                     IconImageSource="setting.png"
+                     Command="{Binding SettingsPageCommand}" />
     </ContentPage.ToolbarItems>
 
-    <Grid Padding="5" RowSpacing="5">
+    <Grid Padding="5"
+          RowSpacing="5">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <!-- SearchBar -->
+            <!-- SearchBar -->
         <SearchBar Grid.Row="0"
                    Placeholder="Search Contact"
                    Text="{Binding SearchContact}"
-                   CancelButtonColor="CornflowerBlue" />
+                   BackgroundColor="{DynamicResource SearchBarBgColor}"/>
 
         <!-- ListView -->
         <ListView Grid.Row="1"
                   x:Name="listContacts"
-                  Background="Transparent"
                   ItemsSource="{Binding ContactDetails}"
-                  SeparatorColor="Aqua"
                   RowHeight="60"
                   SelectedItem="{Binding SelectedContact}"
+                  BackgroundColor="{DynamicResource ContentPageBgColor}"
                   ItemTapped="listContacts_ItemTapped">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <TextCell Text="{Binding Name}"
-                              Detail="{Binding Email}">
+                              TextColor="{DynamicResource TextLvColor}"
+                              Detail="{Binding Email}"
+                              DetailColor="{DynamicResource DetailLvColor}">
                         <TextCell.ContextActions>
                             <MenuItem Text="Delete"
                                       IsDestructive="True"
